syntax = "proto3";

package Account;

service Newconstomer {
    rpc Registered(RegisReq) returns (RegisResp) {}
    rpc LogIn(LogReq) returns (LogResp) {}
}

message RegisReq {
    int32 ueser_id = 1;
    string account = 2;
    string password = 3;
}

message RegisResp {
    string message = 1;
}

message LogReq {
    string account = 1;
    string password = 2;
}

message LogResp {
    string message = 1;
}